--- a/tools/cystLabel_tool/cystLabel_widget.ui
+++ b/tools/cystLabel_tool/cystLabel_widget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>170</width>
+    <width>185</width>
     <height>363</height>
    </rect>
   </property>
@@ -107,6 +107,9 @@
        <property name="maximum">
         <number>255</number>
        </property>
+       <property name="value">
+        <number>255</number>
+       </property>
       </widget>
      </item>
      <item>
@@ -115,6 +118,9 @@
         <number>0</number>
        </property>
        <property name="maximum">
+        <number>255</number>
+       </property>
+       <property name="sliderPosition">
         <number>255</number>
        </property>
        <property name="orientation">
