--- a/tools/cystLabel_tool/cystLabel_widget.ui
+++ b/tools/cystLabel_tool/cystLabel_widget.ui
@@ -71,7 +71,7 @@
      <item>
       <widget class="QSpinBox" name="lowerThresh_spinBox">
        <property name="maximum">
-        <number>255</number>
+        <number>2000</number>
        </property>
       </widget>
      </item>
@@ -81,7 +81,7 @@
         <number>0</number>
        </property>
        <property name="maximum">
-        <number>255</number>
+        <number>2000</number>
        </property>
        <property name="singleStep">
         <number>1</number>
@@ -105,10 +105,10 @@
      <item>
       <widget class="QSpinBox" name="upperThresh_spinBox">
        <property name="maximum">
-        <number>255</number>
+        <number>2000</number>
        </property>
        <property name="value">
-        <number>255</number>
+        <number>2000</number>
        </property>
       </widget>
      </item>
@@ -118,10 +118,13 @@
         <number>0</number>
        </property>
        <property name="maximum">
-        <number>255</number>
+        <number>2000</number>
+       </property>
+       <property name="value">
+        <number>2000</number>
        </property>
        <property name="sliderPosition">
-        <number>255</number>
+        <number>2000</number>
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
