--- a/tools/cystLabel_tool/cystLabel_widget.ui
+++ b/tools/cystLabel_tool/cystLabel_widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>185</width>
-    <height>452</height>
+    <height>454</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -191,7 +191,7 @@
      <item>
       <widget class="QSpinBox" name="lowerThresh_spinBox">
        <property name="maximum">
-        <number>2000</number>
+        <number>5000</number>
        </property>
       </widget>
      </item>
@@ -201,7 +201,7 @@
         <number>0</number>
        </property>
        <property name="maximum">
-        <number>2000</number>
+        <number>5000</number>
        </property>
        <property name="singleStep">
         <number>1</number>
@@ -225,10 +225,10 @@
      <item>
       <widget class="QSpinBox" name="upperThresh_spinBox">
        <property name="maximum">
-        <number>1500</number>
+        <number>5000</number>
        </property>
        <property name="value">
-        <number>1200</number>
+        <number>5000</number>
        </property>
       </widget>
      </item>
@@ -238,13 +238,13 @@
         <number>0</number>
        </property>
        <property name="maximum">
-        <number>1200</number>
+        <number>5000</number>
        </property>
        <property name="value">
-        <number>1200</number>
+        <number>5000</number>
        </property>
        <property name="sliderPosition">
-        <number>1200</number>
+        <number>5000</number>
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -330,11 +330,22 @@
     </spacer>
    </item>
    <item>
-    <widget class="QPushButton" name="segment">
-     <property name="text">
-      <string>Segment</string>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout_6">
+     <item>
+      <widget class="QPushButton" name="toggle">
+       <property name="text">
+        <string>Toggle</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="segment">
+       <property name="text">
+        <string>Segment</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
