--- a/tools/cystLabel_tool/cystLabel_widget.ui
+++ b/tools/cystLabel_tool/cystLabel_widget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>185</width>
+    <width>182</width>
     <height>454</height>
    </rect>
   </property>
@@ -274,7 +274,7 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <item>
-        <widget class="QLabel" name="curserIntensity_label_3">
+        <widget class="QLabel" name="leftKidney_Label">
          <property name="maximumSize">
           <size>
            <width>16777215</width>
@@ -287,14 +287,21 @@
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="segActiveLabel_combobox_2"/>
+        <widget class="QSpinBox" name="leftKidney_spinBox">
+         <property name="maximum">
+          <number>5000</number>
+         </property>
+         <property name="value">
+          <number>2</number>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
-        <widget class="QLabel" name="curserIntensity_label_2">
+        <widget class="QLabel" name="rightKidney_label">
          <property name="maximumSize">
           <size>
            <width>16777215</width>
@@ -307,7 +314,14 @@
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="segActiveLabel_combobox"/>
+        <widget class="QSpinBox" name="rightKidney_spinBox">
+         <property name="maximum">
+          <number>5000</number>
+         </property>
+         <property name="value">
+          <number>1</number>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
