--- a/tools/cystLabel_tool/cystLabel_widget.ui
+++ b/tools/cystLabel_tool/cystLabel_widget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>182</width>
-    <height>454</height>
+    <width>187</width>
+    <height>476</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -274,52 +274,27 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <item>
-        <widget class="QLabel" name="leftKidney_Label">
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>15</height>
-          </size>
-         </property>
+        <widget class="QCheckBox" name="leftKidney_toggle">
          <property name="text">
           <string>Left Kidney</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QSpinBox" name="leftKidney_spinBox">
-         <property name="maximum">
-          <number>5000</number>
-         </property>
-         <property name="value">
-          <number>2</number>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
+      <widget class="QCheckBox" name="rightKidney_toggle">
+       <property name="text">
+        <string>Right Kidney</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
-        <widget class="QLabel" name="rightKidney_label">
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>15</height>
-          </size>
-         </property>
+        <widget class="QCheckBox" name="liver_toggle">
          <property name="text">
-          <string>Right Kidney</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QSpinBox" name="rightKidney_spinBox">
-         <property name="maximum">
-          <number>5000</number>
-         </property>
-         <property name="value">
-          <number>1</number>
+          <string>Liver</string>
          </property>
         </widget>
        </item>
